test/semantic_errors/invalid_call4.mc
void foo(int a, char c) {

}

int main() {
    int a;
    bool b;
    foo(a, b);
}